==> Vitalhb/arduino-variometer/libraries/TwoWireScheduler/TwoWireScheduler.cpp <==
#include <TwoWireScheduler.h>
#include <Arduino.h>
#include <IntTW.h>
#include <avr/pgmspace.h>
#include <bmp280.h>
#include <ms5611.h>
#include <VarioSettings.h>
#include <LightInvensense.h>
#include <vertaccel.h>
#define TEMP_READ 0
#define PRESSURE_RELEASED 1
#define HAVE_PRESSURE 2
#define ACCEL_RELEASED 3
#define HAVE_ACCEL 4
#define MAG_RELEASED 5
#define HAVE_MAG 6
#define bset(bit) status |= (1 << bit)
#define bunset(bit) status &= ~(1 << bit)
#define bisset(bit) (status & (1 << bit))

double TWScheduler::getAlti(void)
{

	/* wait realease */
	while (!bisset(PRESSURE_RELEASED)) {}

	/* copy needed values */
	uint8_t bmp280Values[6];

	noInterrupts();
	for (int i = 0; i < 6; i++)
	{
		bmp280Values[i] = bmp280Output[i];
	}
	bunset(HAVE_PRESSURE);
	interrupts();

	/* compute pressure and temp */
	double temperature, pressure;
	bmp280.computeMeasures(&bmp280Values[0], &bmp280Values[3], temperature, pressure);

	/* get corresponding alti */
	double alti = bmp280.computeAltitude(pressure);

	return alti;
}

double TWScheduler::getAlti(void)
{

	/* wait realease */
	while (!bisset(PRESSURE_RELEASED)) {}

	/* copy needed values */
	uint8_t ms5611Values[6];

	noInterrupts();
	for (int i = 0; i < 6; i++)
	{
		ms5611Values[i] = ms5611Output[i + 3];
	}
	bunset(HAVE_PRESSURE);
	interrupts();

	/* compute pressure and temp */
	double temperature, pressure;
	ms5611.computeMeasures(&ms5611Values[0], &ms5611Values[3], temperature, pressure);

	/* get corresponding alti */
	double alti = ms5611.computeAltitude(pressure);

	return alti;
}

void TWScheduler::getRawAccel(int16_t* rawAccel, int32_t* quat)
{

	/***************/
	/* check accel */
	/***************/

	/* wait realease */
	while (!bisset(ACCEL_RELEASED)) {}

	/* first copy fifo packet */
	uint8_t fifoPacket[LIGHT_INVENSENSE_COMPRESSED_DMP_PAQUET_LENGTH];
	noInterrupts();
	for (int i = 0; i < LIGHT_INVENSENSE_COMPRESSED_DMP_PAQUET_LENGTH; i++)
	{
		fifoPacket[i] = imuOutput[i];
	}
	bunset(HAVE_ACCEL);
	interrupts();

	/* parse FiFo packet to get raw measures */
	uint8_t tap;
	fastMPUParseFIFO(fifoPacket, NULL, rawAccel, quat, tap);

	/* check tap : use callback if needed */
	fastMPUCheckTap(tap);
}

void TWScheduler::getRawMag(int16_t* rawMag)
{

	/*************/
	/* check mag */
	/*************/
	if (bisset(HAVE_MAG))
	{

		/* wait realease */
		while (!bisset(MAG_RELEASED)) {}

		/* copy mag data */
		uint8_t magData[8];
		noInterrupts();
		for (int i = 0; i < 8; i++)
		{
			magData[i] = magOutput[i];
		}
		bunset(HAVE_MAG);
		interrupts();

		/* parse mag data */
#ifdef VERTACCEL_USE_MAG_SENS_ADJ    
		if (fastMPUParseMag(magData, rawMag) >= 0)
		{
#else
		if (fastMPUParseRawMag(magData, rawMag) >= 0)
		{
#endif
		}
	}
}

void TWScheduler::getNorthVector(double* vertVector, double* northVector)
{

	/* get raw mag */
	int16_t rawMag[3];
	getRawMag(rawMag);

	/* compute north vector */
	vertaccel.computeNorthVector(vertVector, rawMag, northVector);
}

#endif //AK89xx_SECONDARY
#endif //HAVE_ACCELEROMETER

/*---------------------*/
/*                     */
/*      Scheduler      */
/*                     */
/*---------------------*/
void TWScheduler::init(void)
{

	/* init the devices */
#ifdef HAVE_BMP280
	bmp280.init();
#else
	ms5611.init();
#endif
#ifdef HAVE_ACCELEROMETER
	vertaccel.init();
#endif

	/* launch timer */
	noInterrupts();   // disable all interrupts

#ifdef TIMER2_COMPA_vect
	TCCR2A = 0b00000010; //CTC MODE
	TCCR2B = TWO_WIRE_SCHEDULER_INTERRUPT_PRESCALE;
	TIMSK2 = 0b00000010; //enable CompA

	TCNT2 = 0;
	OCR2A = TWO_WIRE_SCHEDULER_INTERRUPT_COMPARE;
#else
	TCCR3A = 0b00000000; //CTC MODE
	TCCR3B = 0b00001011; //64 prescale
	TIMSK3 = 0b00000010; //enable CompA

	TCNT3 = 0;
	OCR3A = 2 * TWO_WIRE_SCHEDULER_INTERRUPT_COMPARE; //we assume 16Mhz
#endif

	interrupts();
}

void TWScheduler::mainInterrupt(void)
{

	/* launch interrupts */
#ifdef HAVE_BMP280
	if (bmp280Count == 0)
	{
		bmp280Interrupt();
		bmp280Count = TWO_WIRE_SCHEDULER_BMP280_PERIOD;
	}
#else
	if (ms5611Count == 0)
	{
		ms5611Interrupt();
		ms5611Count = TWO_WIRE_SCHEDULER_MS5611_PERIOD;
	}
#endif
#ifdef HAVE_ACCELEROMETER
	if (imuCount == 0)
	{
		imuInterrupt();
		imuCount = TWO_WIRE_SCHEDULER_IMU_PERIOD;
	}
#ifdef AK89xx_SECONDARY
	if (magCount == 0)
	{
		magInterrupt();
		magCount = TWO_WIRE_SCHEDULER_MAG_PERIOD;
	}
#endif //AK89xx_SECONDARY
#endif //HAVE_ACCELEROMETER


	/* decrease counters */
#ifdef HAVE_BMP280
	bmp280Count--;
#else
	ms5611Count--;
#endif
#ifdef HAVE_ACCELEROMETER
	imuCount--;
#ifdef AK89xx_SECONDARY
	magCount--;
#endif //AK89xx_SECONDARY
#endif //HAVE_ACCELEROMETER

}


#ifdef TIMER2_COMPA_vect
ISR(TIMER2_COMPA_vect)
{
#else
ISR(TIMER3_COMPA_vect)
{
#endif

	TWScheduler::mainInterrupt();
}
