==> GNUVario-E/gnuvario-e2/src/Variometer/TwoWireScheduler/TwoWireScheduler.cpp <==
#include "TwoWireScheduler.h"
#include <Arduino.h>
#include "Variometer/IntTW/IntTW.h"
#include <esp32-hal-timer.h>
#include "freertos/FreeRTOS.h"
#include "freertos/semphr.h"
#include "Variometer/ms5611TW/ms5611TW.h"
#include "varioversion.h"
#include "Variometer/LightInvensense/LightInvensense.h"
#include "Variometer/vertaccel/vertaccel.h"
#define TEMP_READ 0
#define PRESS_READ 1
#define HAVE_PRESSURE 2
#define HAVE_ACCEL 4
#define HAVE_MAG 6
#define HAVE_NEWACCEL 8
#define HAVE_GYRO 16
#define MPU_FIFO_EMPTIED 7
#define bset(bit) status |= (1 << bit)
#define bunset(bit) status &= ~(1 << bit)
#define bisset(bit) (status & (1 << bit))

double TWScheduler::getAlti(void)
{
  /* copy needed values */
  uint8_t ms5611Values[6];

  xSemaphoreTake(ms5611Mutex, portMAX_DELAY);
  for (int i = 0; i < 6; i++)
  {
    ms5611Values[i] = ms5611Output[i + 3];
  }
  bunset(HAVE_PRESSURE);
  xSemaphoreGive(ms5611Mutex);

  /* compute pressure and temp */
  double temperature, pressure;
  ms5611.computeMeasures(&ms5611Values[0], &ms5611Values[3], temperature, pressure);

  ms5611SavePressure = pressure;
  Serial.print("pressure");
  Serial.println(pressure);
  Serial.print("temperature");
  Serial.println(temperature);
  /* get corresponding alti */
  double alti = ms5611.computeAltitude(pressure);

  //	if (alti < 0) alti = ms5611.computeAltitude2(pressure);

  if (alti < 0)
  {
    ms5611.SetBaseSeaPressure(1030);
    alti = 0;
  }

  return alti;
}

void TWScheduler::getRawAccel(int16_t *rawAccel, int32_t *quat)
{
  /***************/
  /* check accel */
  /***************/

  /* first copy fifo packet */
  uint8_t fifoPacket[LIGHT_INVENSENSE_COMPRESSED_DMP_PAQUET_LENGTH];
  xSemaphoreTake(imuMutex, portMAX_DELAY);
  for (int i = 0; i < LIGHT_INVENSENSE_COMPRESSED_DMP_PAQUET_LENGTH; i++)
  {
    fifoPacket[i] = imuOutput[i];
  }
  bunset(HAVE_ACCEL);
  xSemaphoreGive(imuMutex);

  /* parse FiFo packet to get raw measures */
  uint8_t tap;
  fastMPUParseFIFO(fifoPacket, NULL, rawAccel, quat, tap);

  /* check tap : use callback if needed */
  fastMPUCheckTap(tap);

  /* If the the sensor z axis pointing down         */
  /* the heading algorithm don't work !             */
  /* We need to change the basis by rotating around */
  /* y axis                                         */
  /* q_corr = q * (0 + (0, -1, 0))                  */
#if ((VARIOVERSION == 354) || (VARIOVERSION == 390) || (VARIOVERSION == 391) || (VARIOVERSION == 395) || (VARIOVERSION == 396))
  rawAccel[0] = -rawAccel[0];
  rawAccel[2] = -rawAccel[2];

  int32_t tmpQuat;
  tmpQuat = quat[0];
  quat[0] = quat[2];
  quat[2] = -tmpQuat;

  tmpQuat = quat[1];
  quat[1] = quat[3];
  quat[3] = -tmpQuat;
#endif
}

void TWScheduler::getRawMag(int16_t *rawMag)
{
  /*************/
  /* check mag */
  /*************/
  if (bisset(HAVE_MAG))
  {

    /* copy mag data */
    uint8_t magData[8];
    xSemaphoreTake(magMutex, portMAX_DELAY);
    for (int i = 0; i < 8; i++)
    {
      magData[i] = magOutput[i];
    }
    bunset(HAVE_MAG);
    xSemaphoreGive(magMutex);

    /* parse mag data */
#ifdef VERTACCEL_USE_MAG_SENS_ADJ
    if (fastMPUParseMag(magData, rawMag) >= 0)
    {
#else
    if (fastMPUParseRawMag(magData, rawMag) >= 0)
    {
#endif
    }
  }

  /* If the the sensor z axis pointing down         */
  /* the heading algorithm don't work !             */
  /* We need to change the basis by rotating around */
  /* y axis                                         */
#if ((VARIOVERSION == 354) || (VARIOVERSION == 390) || (VARIOVERSION == 391) || (VARIOVERSION == 395) || (VARIOVERSION == 396))
  rawMag[0] = -rawMag[0];
  rawMag[2] = -rawMag[2];
#endif
}

void TWScheduler::getNorthVector(double *vertVector, double *northVector)
{
  /* get raw mag */
  int16_t rawMag[3];
  getRawMag(rawMag);

  /* compute north vector */
  vertaccel.computeNorthVector(vertVector, rawMag, northVector);

  /* apply sensor orientation */
#if ((VARIOVERSION == 254) || (VARIOVERSION == 291) || (VARIOVERSION == 293) || (VARIOVERSION == 294))
  northVector[0] = -northVector[0];
  northVector[1] = -northVector[1];
#elif ((VARIOVERSION == 290) || (VARIOVERSION == 292))
  double tmp;
  tmp = northVector[0];
  northVector[0] = northVector[1];
  northVector[1] = -tmp;
#endif
}

void TWScheduler::getNorthVector2(double *vertVector, double *gyroVector, double *northVector)
{
  /* get raw mag */
  int16_t rawMag[3];
  getRawMag(rawMag);

  /* compute north vector */
  vertaccel.computeNorthVector2(vertVector, gyroVector, rawMag, northVector);
}

/*---------------------*/
/*                     */
/*      Scheduler      */
/*                     */
/*---------------------*/
void TWScheduler::init(void)
{
  /* init the devices */
  /* and mutexes      */

  ms5611.init();
  ms5611Mutex = xSemaphoreCreateBinary();
  xSemaphoreGive(ms5611Mutex);

  vertaccel.init();
  imuMutex = xSemaphoreCreateBinary();
  xSemaphoreGive(imuMutex);

  magMutex = xSemaphoreCreateBinary();
  xSemaphoreGive(magMutex);

#ifdef MPU_ENABLE_INT_PIN
  /* init INT pin */
  imuIntCountMutex = xSemaphoreCreateBinary();
  xSemaphoreGive(imuIntCountMutex);
  pinMode(VARIO_MPU_INT_PIN, INPUT);
  attachInterrupt(VARIO_MPU_INT_PIN, imuIntPinInterrupt, FALLING);
#endif

  /* create scheduler task */
  VARIO_PROG_DEBUG_PRINTLN("Task two wire scheduler started");
  xTaskCreatePinnedToCore(interruptScheduler, "TWS", TWO_WIRE_SCHEDULER_STACK_SIZE, NULL, TWO_WIRE_SCHEDULER_PRIORITY, &schedulerTaskHandler, TWO_WIRE_SCHEDULER_CORE);

  /* create and launch timer */
  timer = timerBegin(TWO_WIRE_SCHEDULER_TIMER_NUM, TWO_WIRE_SCHEDULER_INTERRUPT_PRESCALE, true);
  timerAttachInterrupt(timer, timerCallback, true);
  timerAlarmWrite(timer, TWO_WIRE_SCHEDULER_INTERRUPT_COMPARE, true);
  timerAlarmEnable(timer);
}

void TWScheduler::disableAcquisition()
{
  IntEnable = false;

  vTaskSuspend(schedulerTaskHandler);
  timerAlarmDisable(timer);

#ifdef MPU_ENABLE_INT_PIN
  detachInterrupt(VARIO_MPU_INT_PIN);
#endif

  intTW.release();

#ifdef VARIO_TW_SDA_PIN
  detachInterrupt(VARIO_TW_SDA_PIN);
#endif

#ifdef VARIO_TW_SCL_PIN
  detachInterrupt(VARIO_TW_SCL_PIN);
#endif
}

void TWScheduler::interruptScheduler(void *param)
{
  while (true)
  {
    /* wait */
    xTaskNotifyWait(0, 0, NULL, portMAX_DELAY);

    /* launch interrupt */
    mainInterrupt();
  }
}

void IRAM_ATTR TWScheduler::timerCallback(void)
{
  /* just wake scheduler */
  BaseType_t xHigherPriorityTaskWoken = 0;
  xTaskNotifyFromISR(schedulerTaskHandler, 0, eNoAction, &xHigherPriorityTaskWoken);
  if (xHigherPriorityTaskWoken == pdTRUE)
    portYIELD_FROM_ISR();
}

void TWScheduler::mainInterrupt(void)
{
  /* launch interrupts */
  if (ms5611Count == 0)
  {
    ms5611Interrupt();
    ms5611Count = TWO_WIRE_SCHEDULER_MS5611_PERIOD;
  }

  if (imuCount == 0)
  {
    imuInterrupt();
    imuCount = TWO_WIRE_SCHEDULER_IMU_PERIOD;
  }

  if (magCount == 0)
  {
    magInterrupt();
    magCount = TWO_WIRE_SCHEDULER_MAG_PERIOD;
  }

  /* decrease counters */
  ms5611Count--;

  imuCount--;
  magCount--;
}
